--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>6.14.3</version>
-    <scope>test</scope>
+    >scope>test</scope>
 </dependency>
 
  <dependency>
@@ -26,7 +26,7 @@
     <version>3.17</version>
 </dependency>
 
-   <dependency>
+   <depedency>
     <groupId>org.apache.poi</groupId>
     <artifactId>poi-ooxml</artifactId>
     <version>3.17</version>
@@ -41,4 +41,5 @@
   
   
   
+
 </project>
